# exoSCADA

./: .gitmodules  HACKING.md  Makefile.am  README.md  SECURITY.md  clipboard-2.txt  clipboard.txt  com.scada.exo.json  meson.build
.github/: .gitignore  PULL_REQUEST_TEMPLATE
.github-2/: FUNDING.yml
.github-2/ISSUE_TEMPLATE/: epic.yml
.github-2/workflows/: cloc.sh  install.sh
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  story.yml
.github/_issues/: epic.md
.github/workflows/: codeql-analysis.yml  install-bio-lobster.sh  stale-rfc-kicker2.yml
data/: com.scada.exo.appdata.xml.in  com.scada.exo.desktop.in  com.scada.exo.gschema.xml  meson.build
data/icons/: meson.build
db-test/: what-is-this.js
po/: POTFILES  meson.build
src/: about.js  application-2.vala  application.js  application.vala  init.js  main.js  main.vala  meson.build  window.ui~  window.vala
src/core/: README.md  clipboard.txt  dbus.c  logger.js  mqtt.js
src/core/_next/device/: dcs.device.js
src/core/_next/hierachy/: rfc.md
src/core/_next/protocol/: index.js
src/core/device/: clipboard.txt
src/core/log/: log.js
src/core/logger/: logger.vala  transport.vala
src/core/logger/device/: exoscada-modbus-device.c  exoscada-mqtt-device.c
src/core/logger/devices/: exoscada-s7-device.c  exoscada-s7-device.py
src/core/logger/platform/desktop/: dialogs.vala
src/core/logger/server/: exo.vala
src/documents/: design-considerations.md  reactive.vala  requirements.md
src/examples/: .dockerplate  async.js
src/exoscada/devices/: exoscada-bacnet-device.vala  yoctoplate.md
src/exoscada/integration/: payments.vala
src/exoscada/integration/telegraf/: go.mod  go.sum
src/exoscada/server/: mdns-test.c
src/exoscada/test/: meson-test.build  test.vala
src/exoscada/transports/: transport.vala
src/gtk-legacy/: exoscada.gresource.xml  main-2.vala  main.vala  window.vala
src/legacy/: window.ui
