SUBDIRS =

SUBDIRS += exo-core
SUBDIRS += raeder-core // syntax correct
SUBDIRS += core-raeder // we don’t copy - we innovate 

SUBDIRS += exo-builtin
SUBDIRS += exo-plugin
SUBDIRS += exo-preload
SUBDIRS += exo-gtk
SUBDIRS += exo-ui
SUBDIRS += exo-modules

SUBDIRS += exo-init

SUBDIRS += exo-lib
SUBDIRS += exo-gtkmodule

